--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,8 @@ html, body {
     margin: 0;
     padding: 0;    
     background-color: #f4f4f4;
-    font-family: Helvetica;
+    color: #36454f;
+    font-family: Franklin Gothic Medium;
 }
 
 body {
@@ -16,16 +17,27 @@ body {
     display: table-cell;
     vertical-align: middle;
 }
+
+h1 { 
+    font-size: 250%;
+} 
     
-h1 {
-    color: #c0b283;
+h2 {
     font-style: italic;
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 li {
     list-style-type: none;
     display: inline;
     padding: 10px;
-}    
+}
+
+.links {
+    margin: 20px;
+} 
+
+#avatar { 
+    margin: 20px;
+    width: 200px;
+    height: 200px;
+}
